# my-chat-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
backend/: settings.py  urls.py
chat/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_attachment_device_contact.py  0003_alter_attachment_message.py  0004_notification.py  0005_alter_conversation_options_and_more.py  0006_partition_message_table.py  0007_alter_message_message_type_externaltask.py  0008_alter_message_message_type_externalprocesstask.py
documents/: System_Architecture.md  System_Diagrams.md  modelFe.txt
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInput.css  ChatInput.jsx
frontend/src/components/chat/: MessageBubble.css  MessageBubble.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useChat.js  useClickOutside.js  useContacts.js  useDebounce.js  useProfile.js  useScrollToBottom.js  useWebSocket.js
frontend/src/layouts/: MainLayout.jsx
frontend/src/services/: api.js  socket.js
mobile_app/: App.js  app.json  package-lock.json  package.json
mobile_app/src/services/: api.js  socket.js
rust_ws/: Cargo.toml  Dockerfile
rust_ws/src/: handlers.rs  main.rs  models.rs  redis_listener.rs  state.rs  ws.rs
scratch/: test_process_task_flow.py
(+38 files in other folders)
